# semantic-domains

./: .gitignore  README.md  definitions.py  hierarchy.py  pyproject.toml  rwc_parser.py
semantic-domains/: __init__.py  convert_to_json.py  hierarchy.py  rwc_parser.py
semantic_domains/: __init__.py  convert_to_json.py  definitions.py  hierarchy.py  rwc_parser.py
